added theme for header and list of tracks

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -1,5 +1,5 @@
 .greenBox{
-    background-color: #a6e3d3;
+    background-color: #81E6D9;
     width: 70%;
     align-self: center;
     height: 550px;
