--- a/src/pages/RegisterForm.css
+++ b/src/pages/RegisterForm.css
@@ -6,11 +6,11 @@
 }
 
 .darkBlueText {
-    color: #2f1941;
+    color: #2C7A7B;
 }
 
 .authForm {
-    background-color: #a6e3d3;
+    background-color: #81E6D9;
     align-self: center;
     padding: 5vw;
     border-radius: 20px;
